admin_menu rtl patch

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 copy.src.files=false
-copy.src.target=/var/www/local
+copy.src.target=/var/www/e_scholar_root
 debug.url=DO_NOT_OPEN_BROWSER
 index.file=index.php
 run.as=LOCAL
-url=http://devel.avishay.tk/
+url=http://avishay.mbp/
